--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.15.8",
     "jest": "^27.2.5"
+  },
+  "dependencies": {
+    "ts-node": "^10.7.0"
   }
 }
