--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Leninner/solutionExercises#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.15.8",
+    "@types/jest": "^28.1.4",
     "jest": "^27.2.5"
   },
   "dependencies": {
