--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "angryProfessor.js",
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "preupdate": "git commit -a  -m '[UPDATE] files'",
-    "update": "git push"
+    "update": "git push",
+    "lint": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -21,28 +23,18 @@
   "homepage": "https://github.com/Leninner/solutionExercises#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^28.1.4",
-    "jest": "^27.2.5"
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "eslint": "^8.23.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.1",
+    "jest": "^27.2.5",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
     "ts-node": "^10.7.0"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": false,
-    "singleQuote": true,
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false,
-    "arrowParens": "avoid",
-    "overrides": [
-      {
-        "files": "*.js",
-        "options": {
-          "parser": "babel-eslint"
-        }
-      }
-    ]
-  } 
+  }
 }
