--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,5 +4,9 @@
     "parserOptions": {
       "project": "tsconfig.spec.json"
     }
-  }
+  },
+  "include": [
+    // ...
+    "babel.config.js"
+  ]
 }
