--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "preupdate": "git commit -a  -m '[UPDATE] files'",
     "update": "git push",
     "lint": "eslint . --ext [ts,tsx,js,jsx] --fix",
