--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preupdate": "git commit -a  -m '[UPDATE] files'",
     "update": "git push",
     "lint": "eslint . --ext [ts,tsx,js,jsx] --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start:file": "ts-node"
   },
   "repository": {
     "type": "git",
@@ -35,5 +36,8 @@
     "husky": "^8.0.1",
     "jest": "^27.2.5",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "ts-node": "^10.9.1"
   }
 }
